fix overflow problems

--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -128,16 +128,11 @@ header {
     }
 }
 
-@media screen and (max-width : 768px) {
-    .nav-desktop {
-        display: none;
-    }
-}
-
 
 // about
 .about {
     width: 100%;
+    overflow-x: hidden;
     height: 100%;
 
     .heading {
@@ -151,14 +146,47 @@ header {
         }
 
         span.hide {
+            display: inline-block;
+            width: 0px;
             color: transparent;
         }
+
     }
 
     .desc {
         font-size: 18px;
         text-align: center;
         font-family: 'Yeseva One', cursive;
+    }
+}
+
+@media screen and (max-width : 768px) {
+    .nav-desktop {
+        display: none;
+    }
+}
+
+@media screen and (max-width : 768px) {
+    header {
+        .logo {
+            font-size: 36px;
+        }
+    }
+}
+
+@media screen and (max-width : 425px) {
+    header {
+        .logo {
+            font-size: 28px;
+        }
+    }
+}
+
+@media screen and (max-width:375px) {
+    .about {
+        .heading {
+            // font-size: 40px;
+        }
     }
 }
 
